# benchmark-general-imaging

./: .gitattributes  .gitignore  README.md  download_reqs.py  environment.yml  get_predictions.py  requirements.txt  run_all_ds.sh  run_benchmark.py  runtime_experiment.py  sens_n_variance.py  sens_n_variance_analysis.py  setup.cfg  test_lime.py  train_patches.py  validate_accuracy.py
config/: methods.yaml  suite.yaml  suite_no_ic.yaml
lib/: __init__.py  dataset_models.py
lib/attribution/: gradient.py  guided_backprop.py  (+1 more)
notebooks/: merge_results.ipynb  visualize_attributions.ipynb
plot/: case_study_plots.py  cluster.py  confidence_correlations.py  dfs.py  general_plots.py  generate_all.sh  inter_method_correlations.py  inter_metric_correlations.py  krip.py  krip_alpha_barplot.py  krip_alpha_single.py  krip_alpha_variants.py  metric_corr_compare_masking.py  pairwise_tests.py  sens_n_variance_plots.py  wilcoxon.py  wilcoxon_clustering.py
scripts/: attribution_speedtest.py  case_study_plots.py  check_results.py  download_requirements.py  get_predictions.py  imagenet_dataset.py  merge_results.py  models.py  run_benchmark.py  sample_selection.py  sandbox.ipynb  test_gradcam.py  test_normality.py  train_epoch.py  validate_accuracy.py  validate_patches.py
src/: 2-select-samples.py  3-compute-attrs.py  3_compute_attrs.py  4-run-benchmark.py  4_run_benchmark.py  5_generate_plots.py  arguments.py  compute_attributions.py  method_factory.py  method_loader.py  models.py  run_benchmark.py  run_infidelity.py
util/: datasets.py  dfs.py  get_dataframes.py  models.py
(+153 files in other folders)
