[metadata]
name = benchmark
version = 0.0.1
author = Arne Gevaert, Axel-Jan Rousseau
author_email = arne.gevaert@ugent.be, axeljan.rousseau@uhasselt.be
description = Code for reproducing the results of the paper \"Evaluating Feature Attribution Methods in the Image Domain\"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arnegevaert/benchmark-general-imaging
project_urls = 
    Bug Tracker = https://github.com/arnegevaert/benchmark-general-imaging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
python_requires = >=3.10
install_requires =
    captum==0.5.0
    matplotlib==3.6.3
    seaborn==0.12.2
    scikit-image==0.19.3
    attribench==0.1.3
    torchray==1.0.0.2
    saliency==0.2.0
    torch==1.13.0

[options.packages.find]
where = .
include = util
